# stellar-contract-verification

./: .env.example  .gitignore  README.md  TUTORIAL.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  railway.json  tailwind.config.ts  tsconfig.json  vercel.json
.cursor/rules/: 00-project-context.mdc  01-sep58-metadata.mdc  02-verification-pipeline.mdc  03-api.mdc  04-security.mdc  05-persistence.mdc  06-implementation-plan-demo.mdc
.cursor/rules/backend-rules/: B1-axum-base.mdc  B2-rpc-module.mdc  B3-metadata-module.mdc  B4-builder-module.mdc  B5-verify-endpoint.mdc  audit-backend.mdc
backend/: .env  Cargo.toml  Dockerfile  Dockerfile.prod  SETUP.md  entrypoint.sh
backend/deploy-workspace/: build-and-deploy.sh  redeploy.sh
backend/src/: errors.rs  lib.rs  main.rs
backend/src/builder/: docker.rs  git.rs  mod.rs
backend/src/metadata/: mod.rs  parser.rs
backend/src/routes/: lookup.rs  mod.rs  verify.rs
backend/src/rpc/: client.rs  mod.rs
backend/src/store/: mod.rs  sqlite.rs
deploy/digitalocean/: .env.example  DEPLOY.md  docker-compose.yml  install.sh
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AccordionSection.tsx  BadgesRow.tsx  CircuitTraces.tsx  Logo.tsx  Navbar.tsx  NetworkBadge.tsx  ParticlesBackground.tsx  ProgressSteps.tsx  RecentVerifications.tsx  ResultPanel.tsx  ShieldLogo.tsx  StarryBackground.tsx  VerificationForm.tsx  VerificationResult.tsx  VerifyForm.tsx  WalletButton.tsx
src/hooks/: useWallet.ts
src/lib/: api.ts
src/types/: index.ts
src/utils/: formatting.ts  validators.ts
(+10 files in other folders)
