[package]
name = "stellar-contract-verification"
version = "0.1.0"
edition = "2021"
default-run = "stellar-contract-verification"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenvy = "0.15"
stellar-xdr = { version = "26", features = ["base64"] }
# curr feature is default in v26; base64 feature enables to_xdr_base64/from_xdr_base64
stellar-strkey = "0.0"
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"
